<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frg_actividad"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actividad.FrginformacionA"
    >

    <LinearLayout
        android:id="@+id/linear_actividad"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#eeee"
        android:orientation="vertical"
        android:elevation="3dp">

        <TextView
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sag_subtitulo_actividad"
            android:textColor="@color/secondaryTextColor"
            android:textSize="18dp"
             />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="#eeee" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.Sagamo.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="12dp"
                    android:layout_marginTop="12dp"
                    android:hint="@string/sag_hint_nombre">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tiet_nombre_actividad"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        />

                </com.google.android.material.textfield.TextInputLayout>



                <com.google.android.material.textfield.TextInputLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="12dp"
                    android:hint="@string/sag_hint_tipo"
                    android:background="@color/primaryTextColor"
                    app:boxBackgroundColor="@color/primaryTextColor"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu">

                <AutoCompleteTextView
                    android:id="@+id/spi_tipo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.Sagamo.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="12dp"
                    android:hint="@string/sag_hint_fecha_plazo">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tiet_fecha_actividad"
                        android:clickable="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:editable="false"
                        android:focusable="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.Sagamo.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="12dp"
                    android:hint="@string/sag_hint_descripcion">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tiet_descripcion_actividad"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
        </ScrollView>


    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_to_list_paralelos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right|end"
        android:layout_margin="16dp"
        android:contentDescription="Siguiente"
        app:backgroundTint="@color/secondaryDarkColor"
        app:srcCompat="@drawable/sag_arrow_right_24"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>